1. Создана папка api. Папки: controllers, dto, validation, mappers перенесены в нее. 2. Удалена избыточная аннотация HttpStatus.OK 3. Из объекта ответа ошибок валидации удалено поле: тип исключения 4. В связи с введением валидации из сервис слоя удалена проверка входных параметров: id и cущности. Удалены соответствующие исключения. 5. Из контроллеров удалена бизнес-логика и помещена в сервис-слой. Удалена школа. Ее функционал распределен по группам и студентам. 6. Swagger. Добавлены примеры параметров, запросов и ответов во все методы всех контроллеров. Учтены параметры валидации.
